--- a/WebContent/tt.html
+++ b/WebContent/tt.html
@@ -1,14 +1,51 @@
-<!--
-------=_NextPart_000_0000_01CA9F59.AFB45FE0
-Content-Type: image/gif
-Content-Transfer-Encoding: base64
-Content-Location: logo.gif
-iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEUAAAD/
- //+l2Z/dAAAAM0lEQVR4nGP4/5/h/1+G/58ZDrAz3D/McH8yw83NDDeNGe4U
- g9C9zwz3gVLMDA/A6P9/AFGGFyjOXZtQAAAAAElFTkSuQmCC!
--->
-<img src="data:image/gif;base64,
-iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEUAAAD/
- //+l2Z/dAAAAM0lEQVR4nGP4/5/h/1+G/58ZDrAz3D/McH8yw83NDDeNGe4U
- g9C9zwz3gVLMDA/A6P9/AFGGFyjOXZtQAAAAAElFTkSuQmCC
-" onerror="src='mhtml:'+document.location.href+'!logo.gif';"/>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=GB2312">
+</head>
+<body onload="show(gravatar);">
+	<script src="js/webtoolkit.base64.js" type="text/javascript"></script>
+	<script src="js/deflate.js" type="text/javascript"></script>
+	<script src="js/png.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+		var gravatar = 'iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEUAAAD///+l2Z/dAAAAM0lEQVR4nGP4/5/h/1+G/58ZDrAz3D/McH8yw83NDDeNGe4Ug9C9zwz3gVLMDA/A6P9/AFGGFyjOXZtQAAAAAElFTkSuQmCC!';
+		String.prototype.padRight = function(c, n) {
+			var txt = '';
+			for ( var i = 0; i < n - this.length; i++)
+				txt += c;
+			return txt + this;
+		};
+		function show(data) {
+			var png = new PNG(data);
+			var img = document.getElementById('image'), limg = document
+					.getElementById('largeimage');
+			document.getElementById('nativeimage').src = 'data:image/png;base64,'
+					+ data;
+			img.innerHTML = '';
+			limg.innerHTML = '';
+			img.style.width = png.width + 'px';
+			img.style.height = png.height + 'px';
+			limg.style.width = (png.width * 3) + 'px';
+			limg.style.width = (png.height * 3) + 'px';
+			var line;
+			while (line = png.readLine()) {
+				for ( var x = 0; x < line.length; x++) {
+					var px = document.createElement('div'), px2 = document
+							.createElement('div');
+					px.className = px2.className = 'pixel';
+					px.style.backgroundColor = px2.style.backgroundColor = '#'
+							+ line[x].toString(16).padRight('0', 6);
+					img.appendChild(px);
+					limg.appendChild(px2);
+				}
+			}
+		}
+	</script>
+	<div id="image"></div>
+	<div id="largeimage"></div>
+	<img id="nativeimage" />
+</body>
+</html>
